--- a/KardiaCompleteApp/src/app/components/home/home.component.html
+++ b/KardiaCompleteApp/src/app/components/home/home.component.html
@@ -1,1 +1,27 @@
-<p>home works!</p>
+<div class="home-body my-2">
+  <div class="btn-slide">
+    <button class="one-btn" for="enrollment">1</button>
+    <hr width="200px" />
+    <button class="two-btn" for="dependent">2</button>
+  </div>
+
+  <div class="mini-headings">
+    <h5>Welcome!</h5>
+    <h5>Employee Information</h5>
+  </div>
+
+  <h1>Welcome to KardiaComplete!</h1>
+  <div class="description-title">
+    Enrollment is fast and simple, and gives you immediate access to
+    KardiaComplete at no cost to you.
+  </div>
+  <div class="select-des">Please select the option that applies to you:</div>
+  <div class="btn-group">
+    <button class="btn-enroll" id="enrollment" routerLink="/enrollment">
+      ENROLL MYSELF
+    </button>
+    <button class="btn-dependent" id="dependent">Add A DEPENDENT</button>
+  </div>
+</div>
+
+
